package DP.Tutorial.proxy;

public interface Internet {
    void connectTo(String site);
}
