package DP.Tutorial.proxy.Users;

public abstract class User {

    public abstract void useInternet(String site) throws Exception;

}
